[package]
name = "hanami"
version = "0.1.0"
authors = ["Mason Boeman <masonboeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rayon = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.sprs]
version = "0.9.1"
default-features = false
features = ["alga"]

